[package]
name = "rs-life"
version = "0.1.0"
authors = ["James Wright"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rayon = "1.5.0"
termion = "1.5.5"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "bench"
harness = false
